[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "multipart"] }
once_cell = "1.18.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.26"
rocksdb = "0.21.0"
uuid = { version = "1.4.1", features = ["v7", "fast-rng"] }
md5 = "0.7.0"
tower = { version = "0.4.13", features = ["full"] }
vcpkg = "0.2.15"
open = "5.0.0"
